--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.24.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4"
   }
+    <meta name="google-adsense-account" content="ca-pub-9543073887536718">
 }
 </script>
 </head>
