--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.24.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4"
   }
-    <meta name="google-adsense-account" content="ca-pub-9543073887536718">
-}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9543073887536718"
+     crossorigin="anonymous"></script>
 </script>
 </head>
   <body class="bg-gray-50 text-gray-800">
