--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iPopcorn - Daily Dose of Tech, Gaming & Movies</title>
+    <title>Creative Mind - Tech, Gaming & Viral Tips</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+      body { font-family: 'Roboto', sans-serif; }
+    </style>
   <script type="importmap">
 {
   "imports": {
@@ -19,7 +22,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 text-gray-800 font-sans">
+  <body class="bg-white text-gray-800 font-sans">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
