feat: Optimize image loading and prefetch resources
This commit introduces several performance optimizations across the application. It adds `dns-prefetch` for ad-related domains to reduce latency, implements `decoding="async"` for images in `PostCard` for smoother rendering, and adds explicit `width` and `height` attributes to images where appropriate to prevent layout shifts. Additionally, the `PostCard` and author bio descriptions have received minor text and styling adjustments for improved readability. The pagination buttons now include `aria-label` for better accessibility.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://picsum.photos" />
     <link rel="preconnect" href="https://pagead2.googlesyndication.com" />
+    <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com" />
+    <link rel="dns-prefetch" href="https://googleads.g.doubleclick.net" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
