feat: Optimize resource loading and accessibility
Enhance performance and user experience by implementing several optimizations:

-   **DNS Prefetching:** Added `dns-prefetch` for external image and ad domains to reduce latency for resource loading.
-   **Lazy Loading AdSense:** AdSense script is now lazily loaded on user interaction (scroll/touch) or after a timeout, preventing it from impacting initial page load performance and Lighthouse audits.
-   **Image Fetch Priority:** Explicitly set `fetchPriority="high"` for the first image on the homepage to improve Largest Contentful Paint (LCP).
-   **Accessibility Improvements:** Added `aria-hidden="true"` to decorative font icon elements and `role="button"` where appropriate to improve screen reader compatibility.
-   **Ad Unit Styling:** Minor adjustment to ad unit styling for better visual consistency.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
@@ -12,8 +13,11 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://picsum.photos" />
-    <link rel="preconnect" href="https://pagead2.googlesyndication.com" />
+    
+    <!-- DNS Prefetch for Images & Ads -->
+    <link rel="dns-prefetch" href="https://picsum.photos" />
+    <link rel="dns-prefetch" href="https://lh3.googleusercontent.com" />
+    <link rel="dns-prefetch" href="https://blogger.googleusercontent.com" />
     <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com" />
     <link rel="dns-prefetch" href="https://googleads.g.doubleclick.net" />
 
