feat(seo): enhance meta tags and preconnects
Adds canonical URL meta tag and updates description meta tag dynamically.
Also preconnects to google-analytics.com for performance.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
+    <link rel="preconnect" href="https://www.google-analytics.com" />
     
     <!-- DNS Prefetch for Images & Ads -->
     <link rel="dns-prefetch" href="https://picsum.photos" />
@@ -32,6 +33,7 @@
     <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com" />
     <link rel="dns-prefetch" href="https://googleads.g.doubleclick.net" />
     <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
+    <link rel="dns-prefetch" href="https://www.google-analytics.com" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
