perf: Optimize resource loading and AdSense integration
This commit enhances performance by:
- Adding `crossorigin` attribute to `preconnect` links for better resource loading.
- Preconnecting to `pagead2.googlesyndication.com` for faster ad delivery.
- Modifying the AdSense script loading to be strictly on user interaction, preventing blocking of the main thread during initial load.
- Replacing DOM parsing for image extraction in `bloggerService` with a more performant regex-based approach.
- Removing console warnings and error logs related to missing API keys or API failures, providing a more polished user experience.

--- a/index.html
+++ b/index.html
@@ -18,22 +18,20 @@
       gtag('config', 'G-BHCBDSGG4E');
     </script>
     
-    <!-- Performance Optimization: Preconnect to key origins -->
-    <link rel="preconnect" href="https://cdn.tailwindcss.com" />
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- Performance Optimization: Preconnect to key origins with crossorigin -->
+    <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="preconnect" href="https://www.google-analytics.com" />
+    <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin />
     
     <!-- DNS Prefetch for Images & Ads -->
     <link rel="dns-prefetch" href="https://picsum.photos" />
     <link rel="dns-prefetch" href="https://lh3.googleusercontent.com" />
     <link rel="dns-prefetch" href="https://blogger.googleusercontent.com" />
-    <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com" />
     <link rel="dns-prefetch" href="https://googleads.g.doubleclick.net" />
-    <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
-    <link rel="dns-prefetch" href="https://www.google-analytics.com" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
