--- a/index.html
+++ b/index.html
@@ -53,7 +53,35 @@
           extend: {
             fontFamily: {
               sans: ['Roboto', 'sans-serif'],
-            }
+            },
+            typography: (theme) => ({
+              DEFAULT: {
+                css: {
+                  color: theme('colors.gray.800'),
+                  lineHeight: '1.75',
+                  p: {
+                    marginTop: '1.5em',
+                    marginBottom: '1.5em',
+                  },
+                  h2: {
+                    fontWeight: '900',
+                    letterSpacing: '-0.025em',
+                    marginTop: '2em',
+                    marginBottom: '1em',
+                  },
+                  h3: {
+                    fontWeight: '800',
+                    marginTop: '1.5em',
+                    marginBottom: '0.8em',
+                  },
+                }
+              },
+              dark: {
+                css: {
+                  color: theme('colors.gray.200'),
+                }
+              }
+            })
           }
         }
       }
@@ -64,7 +92,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet" />
 
     <style>
-      body { font-family: 'Roboto', sans-serif; text-rendering: optimizeLegibility; }
+      body { font-family: 'Roboto', sans-serif; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; }
       .no-scrollbar::-webkit-scrollbar { display: none; }
       .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
       @keyframes fade-in-up { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
