feat: professional refactor, admin removal, and safelink integration for @SDMOVIEPOINT_bot

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Creative Mind - Your daily source for viral tech tricks, gaming news, entertainment, and internet culture." />
+    <meta name="description" content="Creative Mind - Deep dives into tech secrets, digital trends, and internet culture. Professional insights for the modern digital mind." />
     <meta name="google-site-verification" content="3pzphnk4tF8_SO4tk5qjVf_A7_axA3tM0pFpSQf5PWM" />
-    <title>Creative Mind - Tech, Gaming & Viral Tips</title>
+    <title>Creative Mind | Professional Tech Insights & Digital Secrets</title>
 
     <!-- 1. CRITICAL: Global Shim for process.env must be first -->
     <script>
